# Rts-Game

./: .gitignore  Cargo.toml  README  t5fddd.odt
t5f_base/: Cargo.toml
t5f_base/src/: base_loading.rs  client.rs  error.rs  lib.rs
t5f_base/src/levels/: mod.rs
t5f_base/src/maps/: developer.rs  mod.rs
t5f_base/src/objects/: crane_yard.rs  factory.rs  marine_squad.rs  mod.rs  object_plugin.rs  resource_node.rs  tank.rs
t5f_base/src/persistence/: mod.rs  plugin.rs  slim.rs
t5f_client/: Cargo.toml
t5f_client/assets/levels/: developer.t5flvl
t5f_client/assets/maps/: developer.ron
t5f_client/assets/models/: barracks.glb  satallite_dish.glb
t5f_client/assets/objects/: barracks.ron  crane_yard.t5fobj  factory.t5fobj  marine_squad.t5fobj  resource_node.ron  resource_node.t5fobj  resource_platform_claimed.t5fobj  resource_platform_unclaimed.t5fobj  tank.t5fobj
t5f_client/assets/saves/: developer_test.t5fsav
t5f_client/assets/textures/ui/: vehicles_icon.png~
t5f_client/config/: camera_settings.ron  controls.ron  display.ron
t5f_client/src/: assets.rs  lib.rs  main.rs
t5f_client/src/client/: mod.rs
t5f_client/src/plugins/: client_loading.rs  client_plugins.rs  debug_plugin.rs  mod.rs
t5f_client/src/resources/: player.rs
t5f_client/src/states/: custom_game_state.rs  error_state.rs  loading_state.rs  main_menu_state.rs  match_loading_state.rs  mod.rs  multiplayer_game.rs  singleplayer_game.rs
t5f_client/src/systems/: camera.rs  mod.rs
t5f_client/src/systems/bundles/: mod.rs
t5f_client/src/ui/: context_ui.rs  custom_game_ui.rs  debug_ui.rs  gameplay_ui.rs  health_bar.rs  health_bar_ui.rs  main_menu_ui.rs  map_selection_ui.rs  mod.rs  ui_plugin.rs
t5f_client/src/ui/slicers/: health_bar_ui.rs  white_box_ui.rs
t5f_client/src/utility/: debug_plugin.rs  mod.rs
t5f_common/: Cargo.toml
t5f_common/src/: identifier.rs  lib.rs  physics.rs  saveload.rs
t5f_common/src/base/: error.rs  mod.rs
t5f_common/src/base/level/: mod.rs
t5f_common/src/base/map/: developer.rs  mod.rs
t5f_common/src/base/object/: barracks.rs  crane_yard.rs  factory.rs  marine_squad.rs  mod.rs  resource_node.rs  tank.rs
t5f_common/src/combat/: combat_plugin.rs  health.rs  mod.rs  weapon.rs
t5f_common/src/command/: command_plugin.rs  commander.rs  mod.rs  navigation.rs  pathfinder.rs  reference.rs  select.rs  snowflake.rs  squad.rs  teamplayer.rs
t5f_common/src/disk/: disk_plugin.rs  saveload.rs
t5f_common/src/net/: identifier.rs  lobby.rs  mod.rs
t5f_common/src/production/: economy.rs  mod.rs  production_plugin.rs  queue.rs
t5f_server/: Cargo.toml
t5f_server/src/: lib.rs  main.rs  server_plugin.rs
t5f_server/src/server_core/: mod.rs
t5f_server/src/server_core/resources/: lobby.rs  mod.rs  player.rs  player_counter.rs
t5f_server/src/server_core/states/: lobby_state.rs  mod.rs
t5f_server/src/server_core/systems/: lobby_bundle.rs  mod.rs
t5f_utility/: Cargo.toml
t5f_utility/src/: colliders.rs  lib.rs  mathfu.rs  random.rs  snowflake.rs  zipqueue.rs
the5thfundamental_common/: Cargo.toml
the5thfundamental_common/src/: content.rs  lib.rs
the5thfundamental_common/src/client/: mod.rs
the5thfundamental_common/src/client/multiplayer/: commands.rs  identifier.rs  mod.rs  sync.rs
the5thfundamental_common/src/combat/: entity_cleanup.rs  health.rs  mod.rs  systems.rs  teamplayer.rs
the5thfundamental_common/src/command/: actor.rs  commands.rs  mod.rs  select.rs  systems.rs
the5thfundamental_common/src/common_core/: common_plugin.rs  content.rs  contentt.rs  mod.rs  physics.rs
the5thfundamental_common/src/common_core/combat/: entity_cleanup.rs  health.rs  mod.rs  systems.rs  teamplayer.rs  weapon.rs
the5thfundamental_common/src/common_core/command/: actor.rs  commands.rs  mod.rs  select.rs  systems.rs
the5thfundamental_common/src/common_core/components/: controller.rs  health.rs  mod.rs  queue.rs  relative.rs  resource.rs  squad.rs  teamplayer.rs  weapon.rs
the5thfundamental_common/src/common_core/content/: error.rs  loading.rs  mod.rs
the5thfundamental_common/src/common_core/physicss/: collider.rs  force.rs  mod.rs  physics_world.rs  raycast.rs  systems.rs
the5thfundamental_common/src/common_core/plugins/: cleanup.rs  combat.rs  mod.rs  object.rs  physics.rs  production.rs  spawn.rs
the5thfundamental_common/src/common_core/production/: economy.rs  mod.rs  queue.rs  systems.rs
the5thfundamental_common/src/common_core/resources/: actor.rs  (+1 more)
the5thfundamental_common/src/multiplayer/: commands.rs  identifier.rs  sync.rs
the5thfundamental_common/src/physics/: collider.rs  conversion.rs  mod.rs  physics_world.rs  raycast.rs  systems.rs
the5thfundamental_common/src/production/: economy.rs  queue.rs  systems.rs
the5thfundamental_common/src/utility/: buffer.rs  constants.rs  decode_collider.rs  interforce.rs  manifest.rs  mod.rs  saveload.rs  serde_structs.rs  settings.rs  zipqueue.rs
the5thfundamental_game/: Cargo.toml  index.ron  log.txt  save.t5f
the5thfundamental_game/assets/models/: resource_platform_claimed.glb  super_simple_tank.glb
the5thfundamental_game/assets/objects/: factory.t5fobj  marine_squad.t5fobj  resource_platform_claimed.t5fobj  tank.t5fobj
the5thfundamental_game/assets/saves/: developer.t5flvl
the5thfundamental_game/src/: lib.rs  main.rs  settings.rs
the5thfundamental_game/src/plugins/: client_loading.rs  mod.rs
the5thfundamental_game/src/resources/: mod.rs  player.rs
the5thfundamental_game/src/states/: error_state.rs  loading_state.rs  main_menu_state.rs  match_loading_state.rs  mod.rs  multiplayer_game.rs  singleplayer_game.rs
the5thfundamental_game/src/systems/: camera.rs  game_ui.rs  misc.rs  mod.rs  spawn.rs  ui_buttons.rs
the5thfundamental_game/src/ui/: context_ui.rs  debug_ui.rs  gameplay_ui.rs  health_bar_ui.rs  main_menu_ui.rs  map_selection_ui.rs  mod.rs
the5thfundamental_game/src/utility/: constants.rs  debug_plugin.rs  encode_collider.rs  load.rs  mod.rs  raycast.rs
the5thfundamental_server/: Cargo.toml
the5thfundamental_server/src/: main.rs
the5thfundamental_server/src/core/: mod.rs
(+152 files in other folders)
