[workspace]
resolver = "2"

members = [
    "t5f_client",
    "t5f_common",
    "t5f_server",
    "t5f_utility",
]

default-members = [
    "t5f_client",
    "t5f_server",
]

[workspace.dependencies]
bevy = "0.15.3"
bevy_rapier3d = { version = "0.29.*", features = ["serde-serialize"]}
bevy_renet = "1.0.0"
bevy_asset_loader = "0.22.*"
ron = { version = "0.10", features = ["integer128"] }
crossbeam-channel = "0.5.*"
uuid = { version = "1.12", features = ["serde", "v4"] }
serde = { version = "1.0.*", features = ["derive"]}
thiserror = "2.0.*"
indexmap = { version = "2.9.*", features = ["serde"] }
log = "0.4.20"
easy-gltf = "1.1.1"
bimap = { version = "0.6.3", features = ["serde"] }
bincode = "1.3" #Enshitification is real
base64 = " 0.22.*"
lazy_static = "1.4.0"
chrono = "0.4.31"
superstruct = "0.9.0"
xtrees = { git = "https://github.com/JJJimbo1/xtrees.git" }
pathing = { git = "https://github.com/JJJimbo1/pathing.git", features = ["serde"] }
bevy_mod_event_group = { git = "https://github.com/JJJimbo1/bevy_mod_event_group.git", features = ["serde"] }

[profile.dev.package."*"]
opt-level = 3
