[package]
name = "t5f"
version = "0.0.1"
authors = ["JJJimbo1"]
edition = "2024"

[dependencies]
clap = { version = "4.5.*", features = ["derive"] }
bevy = "0.16.*"
bevy_rapier3d = { git = "https://github.com/dimforge/bevy_rapier.git", features = ["serde-serialize"]}
bevy_renet = { git = "https://github.com/lucaspoffo/renet.git" }
bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader.git", branch = "bevy_main"}
ron = { version = "0.10.*", features = ["integer128"] }
crossbeam-channel = "0.5.*"
uuid = { version = "1.17.*", features = ["serde", "v4"] }
serde = { version = "1.0.*", features = ["derive"]}
thiserror = "2.0.*"
indexmap = { version = "2.10.*", features = ["serde"] }
log = "0.4"
easy-gltf = "1.1"
bimap = { version = "0.6", features = ["serde"] }
bincode = "1.3" #Enshitification is real
base64 = " 0.22"
lazy_static = "1.4"
chrono = "0.4"
superstruct = "0.10.*"
xtrees = { git = "https://github.com/JJJimbo1/xtrees.git" }
pathing = { git = "https://github.com/JJJimbo1/pathing.git", features = ["serde"] }
bevy_mod_event_group = { git = "https://github.com/JJJimbo1/bevy_mod_event_group.git" }

[profile.dev.package."*"]
opt-level = 3
