[package]
name = "t5f_base"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2021"

[features]
client = []

[dependencies]
bevy = { version = "0.12.*", features = ["serialize"] }
bevy_rapier3d = { version = "0.23.0", features = ["serde-serialize"]}
bevy_asset_loader = "0.19.0"
serde = "1.0.193"
superstruct = "0.7.0"
thiserror = " 1.0.56"
ron = "0.8.1"
log = "0.4.*"
bincode = "1.3.3"
t5f_common = { path = "../t5f_common"}
t5f_utility = { path = "../t5f_utility"}


[lib]
name = "t5f_base"
path = "src/lib.rs"