[package]
name = "t5f_client"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2021"

[lib]
name = "t5f_client"
path = "src/lib.rs"

[[bin]]
name = "t5f_client"
path = "src/main.rs"

[dependencies]

bevy = { version = "0.12.*" }
bevy_rapier3d = { version = "0.23.0"}
bevy_asset_loader = "0.19.0"
bevy_renet = "0.0.10"
log = "0.4.20"
ron = { version = "0.8.1", features = ["integer128"] }
serde = "1.0.191"
walkdir = "2.4.0"
bimap = { version = "0.6.3", features = ["serde"]}
easy-gltf = "1.1.1"
lazy_static = "1.4.0"
chrono = "0.4.31"
bincode = "1.3.3"
snowflake = "1.3.0"
bevy_ninepatch = { path = "../../../crates/bevy_ninepatch" }
t5f_common = { path = "../t5f_common" }
t5f_base = { path = "../t5f_base" }
t5f_utility = { path = "../t5f_utility" }