[package]
name = "t5f_client"
default-run = "t5f_client"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2024"

[lib]
name = "t5f_client"
path = "src/lib.rs"

[[bin]]
name = "t5f_client"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true }
bevy_rapier3d = { workspace = true }
bevy_asset_loader = { workspace = true }
bevy_renet = { workspace = true }
log = { workspace = true }
ron = { workspace = true, features = ["integer128"] }
serde = { workspace = true }
bimap = { workspace = true, features = ["serde"]}
easy-gltf = { workspace = true }
lazy_static = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
uuid = { workspace = true, features = ["v4"]}
t5f_common = { path = "../t5f_common" }
t5f_utility = { path = "../t5f_utility" }