[package]
name = "t5f_common"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2021"

[dependencies]
bevy = { version = "0.12.*", features = ["serialize"] }
bevy_asset_loader = " 0.19.0"
bevy_rapier3d = { version = "0.23.0", features = ["serde-serialize"]}
bevy_renet = "0.0.10"
ron = { version = "0.8.1", features = ["integer128"] }
crossbeam-channel = "0.5.*"
uuid = { version = "1.5.0", features = ["serde", "v4"] }
serde = { version = "1.0.191", features = ["derive"]}
thiserror = "1.0.50"
hashbrown = "0.14.2"
indexmap = { version = "2.1.0", features = ["serde"] }
log = "0.4.20"
obj = "0.10.2"
easy-gltf = "1.1.1"
walkdir = "2.4.0"
bimap = { version = "0.6.3", features = ["serde"]}
bincode = "1.3.3"
approx = "0.5.1"
base64 = " 0.21.5"
t5f_utility = { path = "../t5f_utility"}
xtrees = { git = "https://github.com/JJJimbo1/xtrees.git" }
pathing = { git = "https://github.com/JJJimbo1/pathing.git" }

[lib]
name = "t5f_common"
path = "src/lib.rs"