[package]
name = "t5f_common"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["serialize"] }
bevy_rapier3d = { workspace = true, features = ["serde-serialize"]}
bevy_renet = { workspace = true }
bevy_asset_loader = { workspace = true }
ron = { workspace = true, features = ["integer128"] }
crossbeam-channel = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
serde = { workspace = true, features = ["derive"]}
superstruct = { workspace = true }
thiserror = { workspace = true }
indexmap = { workspace = true, features = ["serde"] }
log = { workspace = true }
easy-gltf = { workspace = true }
bimap = { workspace = true, features = ["serde"] }
bincode = { workspace = true }
base64 = { workspace = true }
t5f_utility = { path = "../t5f_utility"}
xtrees = { workspace = true }
pathing = { workspace = true, features = ["serde"]}
bevy_mod_event_group = { workspace = true, features = ["serde"]}

[lib]
name = "t5f_common"
path = "src/lib.rs"