[package]
name = "t5f_server"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2021"

[dependencies]
bevy = { version = "0.12.*", default_features = false, features = ["multi-threaded", "bevy_asset", "serialize"] }
bevy_renet = "0.0.10"
log = "0.4.20"
multi-map = "1.3.0"
device_query = "1.1.3"
bincode = "1.3.3"
t5f_common = { path = "../t5f_common"}