[package]
name = "t5f_server"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2024"

[lib]
name = "t5f_server"
path = "src/lib.rs"

[[bin]]
name = "t5f_server"
path = "src/main.rs"

[dependencies]
bevy = { workspace = true, features = ["multi_threaded"] }
bevy_renet = { workspace = true }
log = { workspace = true }
bimap = { workspace = true }
bincode = { workspace = true }
t5f_common = { path = "../t5f_common"}