[package]
name = "t5f_utility"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2024"

[[bin]]
name = "extract_collider"
path = "src/colliders.rs"

[dependencies]
bevy = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true }
base64 = { workspace = true }
bincode = { workspace = true }
easy-gltf = { workspace = true }