[package]
name = "the5thfundamental_common"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2021"

[dependencies]
bevy = "0.9.0"
bevy_rapier3d = { version = "0.19.0", features = []}
bevy_prototype_debug_lines = { version = "0.9.0", features = ["3d"]}
ron = { version = "0.8.0", features = ["integer128"] }
serde = "1.0.115"
hashbrown = "0.13.1"
indexmap = { version = "1.9.2", features = ["serde"] }
pathfinding = "4.0.0"
log = "0.4.11"
obj = "0.10.1"
easy-gltf = "0.1.4"
walkdir = "2.3.1"
bimap = { version = "0.6.0", features = ["serde"]}
bincode = "1.3.2"
approx = "0.5.1"
base64 = " 0.13.1"
xtrees = { git = "https://github.com/JJJimbo1/xtrees.git" }

[dependencies.snowflake]
version = "1.3.0"
features = ["serde_support"]

[lib]
name = "the5thfundamental_common"
path = "src/lib.rs"