[package]
name = "the5thfundamental_game"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2021"

[dependencies]
bevy = "0.6.1"
bevy_ninepatch = "0.6.0"
bevy_prototype_debug_lines = { version = "0.6.1", features = ["3d"]}
ron = "0.7.0"
serde = "1.0.115"
log = "0.4.11"
walkdir = "2.3.1"
bimap = { version = "0.6.0", features = ["serde"]}
ncollide3d = { version = "0.27.0", features = ["serde-serialize"]}
easy-gltf = "0.1.4"
lazy_static = "1.4.0"
chrono = "0.4.19"
bincode = "1.3.2"
snowflake = "1.3.0"
the5thfundamental_common = { path = "../the5thfundamental_common"}
zipqueue = { path = "../../../crates/zipqueue"}
qloader = { path = "../../../crates/qloader"}
mathfu = { path = "../../../crates/math_fu"}
ronfile = { path = "../../../crates/ronfile"}
bevy_pathfinding = { path = "../../../crates/bevy_pathfinding", features = ["serde"]}
simple_random =  { path = "../../../crates/simple_random"}