[package]
name = "the5thfundamental_game"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2021"

[lib]
name = "the5thfundamental_game"
path = "src/lib.rs"

[[bin]]
name = "the5thfundamental_game"
path = "src/main.rs"

[dependencies]

bevy = "0.9.0"
bevy_rapier3d = { version = "0.19.0"}
bevy_ninepatch = "0.9.1"
bevy_prototype_debug_lines = { version = "0.9.0", features = ["3d"]}
bevy-debug-text-overlay = "4.0.1"

log = "0.4.11"
ron = { version = "0.8.0", features = ["integer128"] }
serde = "1.0.115"
walkdir = "2.3.1"
bimap = { version = "0.6.0", features = ["serde"]}
easy-gltf = "0.1.4"
lazy_static = "1.4.0"
chrono = "0.4.19"
bincode = "1.3.2"
snowflake = "1.3.0"
base64 = "0.13.0"
the5thfundamental_common = { path = "../the5thfundamental_common"}
# bevy_pathfinding = { path = "../../../crates/bevy_pathfinding", features = ["serde"]}
# simple_random =  { path = "../../../crates/simple_random", features = ["bevy_ecs"]}