[package]
name = "the5thfundamental_server"
version = "0.0.1"
authors = ["Alten Reeves"]
edition = "2018"

[dependencies]
log = "0.4.8"
multi-map = "1.3.0"
device_query = "0.2.4"
bincode = "1.3.2"
mathfu = { path = "../../../crates/math_fu"}
xtrees = { path = "../../../crates/xtrees"}
the5thfundamental_common = { path = "../the5thfundamental_common"}

[dependencies.amethyst]
version = "0.15.0"
features = ["vulkan"]